<resources>
    <string name="app_name">demovar2</string>
    <string name="e_mail">E-mail</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="password">Пароль</string>
    <string name="repeatpassword">Повторите пароль</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Регистрация</string>
    <string name="register">Зарегистрироваться</string>
    <string name="have_account">У меня уже есть аккаунт</string>
    <string name="title_main">Главная</string>
    <string name="title_collections">Коллекции</string>
    <string name="title_compilation">Подборка</string>
    <string name="title_profile">Профиль</string>
    <string name="captain_mar">Captain Marvel</string>
</resources>