<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_main">

    <fragment
        android:id="@+id/navigation_main"
        android:name="com.example.demovar2.ui.main.MainFragment"
        android:label="@string/title_main"
        tools:layout="@layout/fragment_main"/>
    <fragment
        android:id="@+id/navigation_compilation"
        android:name="com.example.demovar2.ui.compilation.CompilationFragment"
        android:label="@string/title_compilation"
        tools:layout="@layout/fragment_compilation"/>
    <fragment
        android:id="@+id/navigation_collection"
        android:name="com.example.demovar2.ui.collections.CollectionFragment"
        android:label="@string/title_collections"
        tools:layout="@layout/fragment_collections"/>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.demovar2.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"/>

</navigation>