<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@color/ic_launcher_background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="230dp"
        android:layout_height="207dp"
        android:layout_marginTop="41dp"
        android:src="@drawable/moviewt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/frame_71"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/frame_71"
        android:clipToOutline="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/e_mail"
            android:textColor="@color/white"
            android:textColorHint="#AFAFAF" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/frame_72"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/frame_71"
        android:clipToOutline="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_71">

        <EditText
            android:id="@+id/surname"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif"
            android:hint="@string/surname"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/e_mail"
            android:textColor="@color/white"
            android:textColorHint="#AFAFAF" />
    </RelativeLayout>

        <RelativeLayout
            android:id="@+id/frame_73"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/frame_71"
            android:clipToOutline="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frame_72">

            <EditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/e_mail"
                android:textColor="@color/white"
                android:textColorHint="#AFAFAF" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/frame_74"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/frame_71"
            android:clipToOutline="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frame_73">

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif"
                android:hint="@string/password"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/e_mail"
                android:textColor="@color/white"
                android:textColorHint="#AFAFAF" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/frame_75"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/frame_71"
            android:clipToOutline="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frame_74">

            <EditText
                android:id="@+id/repeatpassword"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif"
                android:hint="@string/repeatpassword"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/e_mail"
                android:textColor="@color/white"
                android:textColorHint="#AFAFAF" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/frame_2"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/frame_2"
            android:clipToOutline="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frame_75">

            <TextView
                android:id="@+id/register"
                android:layout_width="40dp"
                android:layout_height="18dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:text="@string/register"
                android:textAlignment="center"
                android:textAppearance="@style/sign_in"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/frame_1"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/frame_71"
            android:clipToOutline="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frame_2">

            <TextView
                android:id="@+id/have_account"
                android:layout_width="83dp"
                android:layout_height="18dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:text="@string/have_account"
                android:textAlignment="center"
                android:textAppearance="@style/sign_up"
                android:textStyle="bold" />
        </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>